Improve styles for long titles

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1445,7 +1445,8 @@
 					 * Hack for long titles
 					 */
 					&.opening,
-					&.uchida {
+					&.uchida,
+					&.programming-schools-discussion {
 
 						.session-title,
 						.time {
