Improve the style

--- a/assets/_sass/_index.scss
+++ b/assets/_sass/_index.scss
@@ -1489,6 +1489,18 @@
 						@include media(380px) {
 							min-height: 0;
 						}
+
+						@include media($m-screen) {
+
+							.session-title,
+							.time {
+								display: block;
+							}
+
+							.session-title {
+								margin-right: 0;
+							}
+						}
 					}
 
 					&.digitalcube {
